# Fixed toolbar CSS to have proper background when toolbar content wrap to multiple lines, fixed minor issue in text autocomplete with an extra space in 1st set of suggested words

--- a/site/assets/css/flexi_filters.css
+++ b/site/assets/css/flexi_filters.css
@@ -399,7 +399,7 @@ ul.fc_field_filter.fc_checkradio_group label {
 .fc_has_inner_label.fc_has_inner_label_input,
 .fc_has_inner_prompt.fc_has_inner_prompt_input {
 	left:14px;
-	top:10px;
+	top:6px;
 	color: black;
 	line-height: 150%;
 	padding: 0px 0px 0px 4px;
